Update nextflow config file

--- a/retraining.config
+++ b/retraining.config
@@ -50,79 +50,12 @@ profiles {
       cache = "lenient"
       cpus = "1"
 
-        withLabel: "kraken" {
-          cpus = "10"
-          memory = "750 GB"
-          time = "4 h"
-         }
-
-        withLabel: "fastp" {
-          cpus = "10"
-          memory = "10 GB"
-          time = "1 h"
-         }
-
-         withLabel: "spades" {
-          cpus = "16"
-          memory = {125.GB * task.attempt}
-          time = {"4 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [137, 140, 143, 247] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
-
-        withLabel: "cd_hit_est" {
-          cpus = "2"
-          memory = {0.8.GB * task.attempt}
-          time = {"4 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [137, 140, 143, 247] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
-          
-        withLabel: "shiver" {
-          cpus = "1"
-          memory = {2.GB * task.attempt}
-          time = {"4 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [1, 137, 140, 143, 247] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
-
-        withLabel: "phyloscanner_align_reads" {
-          cpus = "1"
-          memory = "5 GB"
-          time = "30 h"
-         }
-
-        withLabel: "iqtree" {
-          cpus = 1
-          memory = {5.GB * task.attempt}
-          time = {"25 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [137, 140, 143] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
-
-      
-        withLabel: "phyloscanner_tree_analysis" {
+      withLabel: "select_mafs_patstats" {
           cpus = "5"
-          memory = "10 GB"
-          time = {"20 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [137, 140, 143] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
-
-        withLabel: "normalisation" {
-          cpus = "16"
-          memory = {5.GB * task.attempt}
-          time = {"30 h" * task.attempt}
-          errorStrategy = { task.exitStatus in [137, 140, 143, 247] ? 'retry' : 'finish' }
-          maxErrors = '-1'
-          maxRetries = 3
-         }
+          memory = "5 GB"
+          time = "1 h"
       }
+    }
   }
 
   rki_priority {
