Update config: add label category - low

--- a/retraining.config
+++ b/retraining.config
@@ -50,7 +50,7 @@ profiles {
       cache = "lenient"
       cpus = "1"
 
-      withLabel: "select_mafs_patstats" {
+      withLabel: "low" {
           cpus = "5"
           memory = "5 GB"
           time = "1 h"
