--- a/retraining.config
+++ b/retraining.config
@@ -55,6 +55,11 @@ profiles {
           memory = "10 GB"
           time = "1 h"
       }
+       withLabel: "medium" {
+          cpus = "7"
+          memory = "15 GB"
+          time = "3 h"
+      }
     }
   }
 
