Update config file

--- a/retraining.config
+++ b/retraining.config
@@ -55,10 +55,17 @@ profiles {
           memory = "10 GB"
           time = "1 h"
       }
+      
        withLabel: "medium" {
-          cpus = "8"
-          memory = "30 GB"
-          time = "20 h"
+          cpus = "12"
+          memory = "25 GB"
+          time = "15 h"
+      }
+
+      withLabel: "high" {
+          cpus = "32"
+          memory = "50 GB"
+          time = "30 h"
       }
     }
   }
